--- a/scss/organisms/_hero.scss
+++ b/scss/organisms/_hero.scss
@@ -445,7 +445,7 @@
     overflow: hidden;
     position: relative; // contain absolutely-positioned banner images at all breakpoints
     aspect-ratio: 16 / 9; // mobile height driven by aspect ratio
-    margin-top: -1px; // close sub-pixel gap between stacked hero panels on mobile
+    margin-top: -1px; // close sub-pixel gap between stacked hero panels on retina
 
     @include respond-to('md') {
       aspect-ratio: 21 / 9; // shallower at tablet
@@ -507,11 +507,11 @@
 
     @include respond-below('lg') {
       height: auto;
-      width: calc(100% + 2px);
+      width: 100%;
       top: 0;
-      left: -1px;
-      transform: none;
-      transform-origin: unset;
+      left: 0;
+      transform: scale(1.005); // eliminate retina sub-pixel rounding gaps
+      transform-origin: center top;
     }
   }
 
